--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				}
 				.nav {
 					width:100%;
-					background-color: #34baeb;
+					background-color: #ffa114;
 				}
 				.ejercicio {
 					margin:auto;
@@ -27,7 +27,7 @@
 					max-width: 960px;
 				}
 				h2 {
-					color: #34baeb;
+					color: #ffa114;
 					font-size: 45px;
 					padding-right: 20px;
 				}
