--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 		        <h3> Arduino + BrikiABC </h3>
 		<div>
 		</a>	
-			<a href="https://github.com/sofiacastaneda/ambientes/blob/master/01/sketch.js" target="_blank"> <!-- PONER AQUI EL LINK DEL EJERCICIO: nombredelrepositorio/nombrecarpeta-->
+			<a href="https://github.com/sofiacastaneda/ambientes/blob/master/01light_up/light_up.ino" target="_blank"> <!-- PONER AQUI EL LINK DEL EJERCICIO: nombredelrepositorio/nombrecarpeta-->
 			<div class="ejercicio">
 				<div class="adentro">
-					<h2> 0.1 </h2>
-					<h4> Ensayis Código </h4>
+					<h2> 01 </h2>
+					<h4> Prender Led </h4>
 				</div>
 			</div>
 		</a>
