--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
 				</div>
 			</div>
 		</a>
+			<a href="https://github.com/sofiacastaneda/ambientes/blob/master/02fade_example/fade_example.ino" target="_blank"> <!-- PONER AQUI EL LINK DEL EJERCICIO: nombredelrepositorio/nombrecarpeta-->
+			<div class="ejercicio">
+				<div class="adentro">
+					<h2> 02 </h2>
+					<h4> Ejemplo Fade </h4>
+				</div>
+			</div>
+		</a>
 		
 	</body>
 <html>
