--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
 				</div>
 			</div>
 		</a>
+			<a href="https://github.com/sofiacastaneda/ambientes/blob/master/02fade_example/Blinking_leds_3.ino" target="_blank"> <!-- PONER AQUI EL LINK DEL EJERCICIO: nombredelrepositorio/nombrecarpeta-->
+			<div class="ejercicio">
+				<div class="adentro">
+					<h2> 03 </h2>
+					<h4> Tres leds que parpadean </h4>
+				</div>
+			</div>
+		</a>
 		
 	</body>
 <html>
