--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-			<title> sofiasofia </title>  <!-- PONER AQUI SU NOMBRE -->
+			<title> sofiasofia </title>  
 			<link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -65,8 +65,8 @@
 	</head>
 	<body>
 		<div class="nav">
-			<a href = "https://sofiacastaneda.github.io/ambientes/" target="_blank"> <!-- PONER AQUI LINK A SU REPOSITORIO-->
-			   <h1>  sofiasofia </h1> <!-- PONER AQUI SU NOMBRE -->
+			<a href = "https://sofiacastaneda.github.io/ambientes/" target="_blank"> <!-- LINK AL REPOSITORIO -->
+			   <h1>  sofiasofia </h1> 
 		        </a>
 		        <h3> Arduino + BrikiABC </h3>
 		<div>
